added preliminary node scheduling endpoint
