# server/api/openapi.yaml
@@ -432,7 +432,21 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-
+  /autoschedule/{scheduleId}:
+    post:
+      security:
+        - Bearer: []
+      summary: Generate shift assignments given a filled out shift-tree
+      parameters:
+        - name: scheduleId
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        204:
+          description: Successful
   /shifts/{shiftId}:
     put:
       security:
@@ -593,28 +607,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-
-  /hello:
-    get:
-      summary: "Test endpoint"
-      parameters:
-        - name: name
-          in: query
-          required: true
-          schema:
-            type: string
-          description: "Name to greet"
-      responses:
-        200:
-          description: "Successful response"
-          content:
-            application/json:
-              schema:
-                type: "object"
-                properties:
-                  message:
-                    type: "string"
-                    example: "Hello World"
 components:
   securitySchemes:
     Bearer:
